Bug 1237769 - Disable e10s on Windows XP if layers acceleration is requested